force-app/main/default/objects/Sprint__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The last day of this sprint. The next sprint starts the following day.</description>
    <inlineHelpText>The sprint ends on this date. Set automatically as start date + 13 days (two-week sprints).</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>