force-app/main/default/objects/Sprint__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Controls the display order of sprints on the board and in lists. Set automatically when sprints are generated or closed.</description>
    <inlineHelpText>Sprint number used for ordering. Managed automatically — do not edit manually.</inlineHelpText>
    <label>Sequence</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>