force-app/main/default/objects/Sprint__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The first day of this sprint. Sprints run for two weeks.</description>
    <inlineHelpText>The sprint begins on this date. Set automatically when generating or closing sprints.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>