force-app/main/default/objects/Sprint__c/recordTypes/Backlog.recordType-meta.xml
<RecordType>
    <fullName>Backlog</fullName>
    <active>true</active>
    <description>The permanent catch-all sprint for unscheduled work items. Only one Backlog sprint should exist at a time.</description>
    <label>Backlog</label>
</RecordType>