force-app/main/default/objects/Sprint__c/recordTypes/Sprint.recordType-meta.xml
<RecordType>
    <fullName>Sprint</fullName>
    <active>true</active>
    <description>A time-boxed iteration containing planned work items.</description>
    <label>Sprint</label>
</RecordType>